# CLionScientificPlotting

./: .gitignore  CMakeLists.txt  readme.md  source.c
